feat: use PackageManagerTabs in Rspress document

--- a/packages/document/docs/en/plugin/official-plugins/last-updated.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/last-updated.mdx
@@ -1,5 +1,7 @@
 # @rspress/plugin-last-updated
 
+import { PackageManagerTabs } from '@theme';
+
 > [Source Code](https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-last-updated)
 
 ## Introduction
@@ -14,14 +16,7 @@ When you have configured `lastUpdated: true` in the default theme, this plugin w
 
 ## Installation
 
-```bash
-# npm
-npm install @rspress/plugin-last-updated
-# yarn
-yarn add @rspress/plugin-last-updated
-# pnpm
-pnpm install @rspress/plugin-last-updated
-```
+<PackageManagerTabs command="add @rspress/plugin-last-updated -D" />
 
 ## Usage
 
