--- a/packages/document/docs/en/plugin/official-plugins/preview.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/preview.mdx
@@ -1,19 +1,14 @@
 # @rspress/plugin-preview
 
+import { PackageManagerTabs } from '@theme';
+
 > [Source Code](https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-preview)
 
 Used to preview components in the code block of md(x) files.
 
 ## Installation
 
-```bash
-# npm
-npm install @rspress/plugin-preview -D
-# yarn
-yarn add @rspress/plugin-preview -D
-# pnpm
-pnpm install @rspress/plugin-preview -D
-```
+<PackageManagerTabs command="add @rspress/plugin-preview -D" />
 
 ## Usage
 
