--- a/packages/document/docs/en/plugin/official-plugins/typedoc.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/typedoc.mdx
@@ -1,19 +1,14 @@
 # @rspress/plugin-typedoc
 
+import { PackageManagerTabs } from '@theme';
+
 > [Source Code](https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-typedoc)
 
 Integration of [TypeDoc](https://github.com/TypeStrong/typedoc)'s Rspress Plugin for Automatically Generating API Documentation for TS Modules.
 
 ## Installation
 
-```bash
-# npm
-npm install @rspress/plugin-typedoc
-# yarn
-yarn add @rspress/plugin-typedoc
-# pnpm
-pnpm install @rspress/plugin-typedoc
-```
+<PackageManagerTabs command="add @rspress/plugin-typedoc -D" />
 
 ## Usage
 
