--- a/packages/document/docs/zh/plugin/official-plugins/last-updated.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/last-updated.mdx
@@ -1,5 +1,7 @@
 # @rspress/plugin-last-updated
 
+import { PackageManagerTabs } from '@theme';
+
 > [源码地址](https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-last-updated)
 
 ## 介绍
@@ -14,14 +16,7 @@
 
 ## 安装
 
-```bash
-# npm
-npm install @rspress/plugin-last-updated
-# yarn
-yarn add @rspress/plugin-last-updated
-# pnpm
-pnpm install @rspress/plugin-last-updated
-```
+<PackageManagerTabs command="add @rspress/plugin-last-updated -D" />
 
 ## 使用
 
