--- a/packages/document/docs/zh/plugin/official-plugins/preview.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/preview.mdx
@@ -1,19 +1,14 @@
 # @rspress/plugin-preview
 
+import { PackageManagerTabs } from '@theme';
+
 > [源码地址](https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-preview)
 
 用于预览 md(x) 文件代码块中的组件。
 
 ## 安装
 
-```bash
-# npm
-npm install @rspress/plugin-preview -D
-# yarn
-yarn add @rspress/plugin-preview -D
-# pnpm
-pnpm install @rspress/plugin-preview -D
-```
+<PackageManagerTabs command="add @rspress/plugin-preview -D" />
 
 ## 使用
 
