--- a/packages/document/docs/zh/plugin/official-plugins/typedoc.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/typedoc.mdx
@@ -1,19 +1,14 @@
 # @rspress/plugin-typedoc
 
+import { PackageManagerTabs } from '@theme';
+
 > [源码地址](https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-typedoc)
 
 集成 [TypeDoc](https://github.com/TypeStrong/typedoc) 的 Rspress 插件，用于自动生成 TS 模块的 API 文档。
 
 ## 安装
 
-```bash
-# npm
-npm install @rspress/plugin-typedoc
-# yarn
-yarn add @rspress/plugin-typedoc
-# pnpm
-pnpm install @rspress/plugin-typedoc
-```
+<PackageManagerTabs command="add @rspress/plugin-typedoc -D" />
 
 ## 使用
 
