feat: documentation about `enableContentAnimation` feature

--- a/packages/document/docs/en/api/config/config-theme.mdx
+++ b/packages/document/docs/en/api/config/config-theme.mdx
@@ -462,3 +462,22 @@ export default defineConfig({
   },
 });
 ```
+
+## enableContentAnimation
+
+- Type: `boolean`
+- Default: `false`
+
+Whether there is an animation effect when switching between pages. For example:
+
+> The animation is not configurable for now.
+
+```ts title="rspress.config.ts"
+import { defineConfig } from 'rspress/config';
+
+export default defineConfig({
+  themeConfig: {
+    enableContentAnimation: true,
+  },
+});
+```
