--- a/packages/document/docs/zh/api/config/config-theme.mdx
+++ b/packages/document/docs/zh/api/config/config-theme.mdx
@@ -447,3 +447,23 @@ export default defineConfig({
   },
 });
 ```
+
+
+## enableContentAnimation
+
+- Type: `boolean`
+- Default: `false`
+
+在页面切换的时候是否显示转场动画，例如：
+
+> 转场动画暂时不能配置
+
+```ts title="rspress.config.ts"
+import { defineConfig } from 'rspress/config';
+
+export default defineConfig({
+  themeConfig: {
+    enableContentAnimation: true,
+  },
+});
+```
