doc: add period in the document

--- a/packages/document/docs/zh/api/config/config-theme.mdx
+++ b/packages/document/docs/zh/api/config/config-theme.mdx
@@ -456,7 +456,7 @@ export default defineConfig({
 
 在页面切换的时候是否显示转场动画，例如：
 
-> 转场动画暂时不能配置
+> 转场动画暂时不能配置。
 
 ```ts title="rspress.config.ts"
 import { defineConfig } from 'rspress/config';
