--- a/packages/document/docs/en/api/config/config-basic.mdx
+++ b/packages/document/docs/en/api/config/config-basic.mdx
@@ -249,3 +249,64 @@ export default defineConfig({
 ```
 
 The `default` parameter is the default version, and the `versions` parameter is the version list.
+
+## route
+
+- Type: `Object`
+
+Custom route configuration.
+
+### route.include
+
+- Type: `string[]`
+- Default: `[]`
+
+Add some extra files in the route. By default, only the files in the document root directory will be included in the route. If you want to add some extra files to the route, you can use this option. For example:
+
+```js
+import { defineConfig } from 'rspress/config';
+
+export default defineConfig({
+  route: {
+    include: ['other-dir/**/*'],
+  },
+});
+```
+
+> Note: The strings in the array support glob patterns.
+
+### route.exclude
+
+- Type: `string[]`
+- Default: `[]`
+
+Exclude some files from the route. For example:
+
+```js
+import { defineConfig } from 'rspress/config';
+
+export default defineConfig({
+  route: {
+    exclude: ['custom.tsx', 'component/**/*'],
+  },
+});
+```
+
+> Note: The strings in the array support glob patterns.
+
+### route.extensions
+
+- Type: `string[]`
+- Default: `[]`
+
+The extensions of the files that will be included in the route. By default, Rspress will include all `'js'`, `'jsx'`, `'ts'`, `'tsx'`, `'md'`, `'mdx'` files in the route. If you want to customize the extensions, you can use this option. For example:
+
+```js
+import { defineConfig } from 'rspress/config';
+
+export default defineConfig({
+  route: {
+    extensions: ['.jsx', '.md', '.mdx'],
+  },
+});
+```
