chore: rename configuartion

--- a/packages/document/docs/en/api/config/config-basic.mdx
+++ b/packages/document/docs/en/api/config/config-basic.mdx
@@ -254,7 +254,7 @@ The `default` parameter is the default version, and the `versions` parameter is 
 
 - Type: `Object`
 
-Custom route configuration.
+Custom route config.
 
 ### route.include
 
