--- a/packages/document/docs/en/api/config/config-basic.mdx
+++ b/packages/document/docs/en/api/config/config-basic.mdx
@@ -310,3 +310,20 @@ export default defineConfig({
   },
 });
 ```
+
+### route.cleanUrls
+
+- Type: `Boolean`
+- Default: `false`
+
+Generate url without suffix when `cleanUrls` is `true` for shorter url link.
+
+```js
+import { defineConfig } from 'rspress/config';
+
+export default defineConfig({
+  route: {
+    cleanUrls: true,
+  },
+});
+```
