doc: add period

--- a/packages/document/docs/zh/api/config/config-basic.mdx
+++ b/packages/document/docs/zh/api/config/config-basic.mdx
@@ -316,7 +316,7 @@ export default defineConfig({
 - Type: `Boolean`
 - Default: `false`
 
-开启后可以生成无 `.html` 后缀的链接，URL 可以更加简洁
+开启后可以生成无 `.html` 后缀的链接，URL 可以更加简洁。
 
 ```js
 import { defineConfig } from 'rspress/config';
