--- a/packages/document/docs/en/guide/advanced/custom-theme.mdx
+++ b/packages/document/docs/en/guide/advanced/custom-theme.mdx
@@ -158,7 +158,7 @@ function Layout() {
 
 const setup = () => {};
 
-export { Layoutm, setup };
+export { Layout, setup };
 
 // theme/Navbar.tsx
 export function Navbar() {
