--- a/packages/document/docs/zh/guide/advanced/custom-theme.mdx
+++ b/packages/document/docs/zh/guide/advanced/custom-theme.mdx
@@ -157,7 +157,7 @@ function Layout() {
 
 const setup = () => {};
 
-export { Layoutm, setup };
+export { Layout, setup };
 
 // theme/Navbar.tsx
 export function Navbar() {
