--- a/packages/document/docs/en/fragments/mdx-rs.mdx
+++ b/packages/document/docs/en/fragments/mdx-rs.mdx
@@ -9,5 +9,5 @@ export default defineConfig({
 ```
 
 :::tip NOTICE
-The bottom layer of this function is based on the [@rspress/mdx-rs-binding](https://github.com/web-infra-dev/mdx-rs-binding) library developed by Rspress. The performance is **5 ~ 10** times higher than the JS version of the MDX compiler, but the JS version of the plugin is not yet supported. If you need to add a custom remark or rehype plugin, it is not recommended to enable this function.
+The bottom layer of this function is based on the [@rspress/mdx-rs-binding](https://github.com/web-infra-dev/mdx-rs-binding) library developed by Rspress. The performance is **10+** times higher than the JS version of the MDX compiler, but the JS version of the plugin is not yet supported. If you need to add a custom remark or rehype plugin, it is not recommended to enable this function.
 :::
