--- a/packages/document/docs/zh/guide/basic/auto-nav-sidebar.mdx
+++ b/packages/document/docs/zh/guide/basic/auto-nav-sidebar.mdx
@@ -1,6 +1,6 @@
 # 自动化导航栏/侧边栏
 
-在 Rspress 中，除了在配置文件中通过 `themeConfig` 声明 [nav](/api/config/config-theme#nav) 和 [sidebar](/api/config/config-theme#sidebar)， 你也可以通过声明 `_meta.json` 描述文件来自动化生成导航栏和侧边栏，我们更加推荐后者，因为可以使配置文件更加简洁和清晰。
+在 Rspress 中，除了在配置文件中通过 `themeConfig` 声明 [nav](/api/config/config-theme.html#nav) 和 [sidebar](/api/config/config-theme.html#sidebar)， 你也可以通过声明 `_meta.json` 描述文件来自动化生成导航栏和侧边栏，我们更加推荐后者，因为可以使配置文件更加简洁和清晰。
 
 :::tip 提示
 当配置文件 `rspress.config.ts` 中没有 `nav` 和 `sidebar` 配置的情况下，自动化导航栏/侧边栏才会生效。
