--- a/packages/document/docs/en/guide/start/introduction.mdx
+++ b/packages/document/docs/en/guide/start/introduction.mdx
@@ -50,10 +50,9 @@ Based on [PrismJS](https://github.com/PrismJS/prism) for runtime code coloring, 
 
 ```ts title="rspress.config.ts"
 import { defineConfig } from 'rspress/config';
-import path from 'path';
 
 export default defineConfig({
-  root: path.join(__dirname, 'docs'),
+  root: 'docs',
 });
 ```
 
