--- a/packages/document/docs/en/api/commands.mdx
+++ b/packages/document/docs/en/api/commands.mdx
@@ -6,10 +6,11 @@ Through this chapter, you can learn about the built-in commands of Rspress and h
 
 The `rspress dev` command is used to start a local development server, providing a development environment for document preview and debugging.
 
-```bash
-Usage: rspress dev [options]
+```txt
+Usage: rspress dev [root] [options]
 
 Options:
+   root specify the root directory of the project, which is `docs` in current directory by default, Optional
    -c --config <config> specify config file path, which can be a relative path or an absolute path
    -h, --help show command help
 ```
@@ -18,10 +19,11 @@ Options:
 
 The `rspress build` command is used to build documentation site for production.
 
-```bash
-Usage: rspress build [options]
+```txt
+Usage: rspress build [root] [options]
 
 Options:
+   root specify the root directory of the project, which is `docs` in current directory by default, Optional
    -c --config <config> specify config file path, which can be a relative path or an absolute path
    -h, --help show command help
 ```
@@ -30,7 +32,7 @@ Options:
 
 The `rspress preview` command is used to preview the output files of the `rspress build` command locally.
 
-```bash
+```txt
 Usage: rspress preview [options]
 
 Options:
