--- a/packages/document/docs/en/guide/basic/static-assets.mdx
+++ b/packages/document/docs/en/guide/basic/static-assets.mdx
@@ -18,9 +18,9 @@ The `document root directory` mentioned below refers to the directory specified 
 
 ```ts title="rspress.config.ts"
 import { defineConfig } from 'rspress/config';
-import path from 'path';
+
 export default defineConfig({
-  root: path.join(__dirname, 'docs'),
+  root: 'docs',
 });
 ```
 
