--- a/packages/document/docs/en/guide/start/getting-started.mdx
+++ b/packages/document/docs/en/guide/start/getting-started.mdx
@@ -46,10 +46,9 @@ Then initialize a configuration file `rspress.config.ts`:
 
 ```ts title="rspress.config.ts"
 import { defineConfig } from 'rspress/config';
-import path from 'path';
 
 export default defineConfig({
-  root: path.join(__dirname, 'docs'),
+  root: 'docs',
 });
 ```
 
