--- a/packages/document/docs/zh/api/commands.mdx
+++ b/packages/document/docs/zh/api/commands.mdx
@@ -7,9 +7,10 @@
 `rspress dev` 命令用于启动一个本地开发服务器，提供一个文档进行预览和调试的开发环境。
 
 ```bash
-Usage: rspress dev [options]
+Usage: rspress dev [root] [options]
 
 Options:
+  root                  指定文档根目录，默认为当前工作目录下的 docs 目录，可选
   -c --config <config>  指定配置文件路径，可以为相对路径或绝对路径
   -h, --help            显示命令帮助
 ```
@@ -19,9 +20,10 @@ Options:
 `rspress build` 命令用于构建出针对生产环境的文档产物。
 
 ```bash
-Usage: rspress build [options]
+Usage: rspress build [root] [options]
 
 Options:
+  root                  指定文档根目录，默认为当前工作目录下的 docs 目录，可选
   -c --config <config>  指定配置文件路径，可以为相对路径或绝对路径
   -h, --help  显示命令帮助
 ```
