--- a/packages/document/docs/zh/guide/basic/static-assets.mdx
+++ b/packages/document/docs/zh/guide/basic/static-assets.mdx
@@ -18,9 +18,10 @@
 
 ```ts title="rspress.config.ts"
 import { defineConfig } from 'rspress/config';
-import path from 'path';
+
 export default defineConfig({
-  root: path.join(__dirname, 'docs'),
+  // 同时支持相对路径和绝对路径
+  root: 'docs',
 });
 ```
 
