--- a/packages/document/docs/zh/guide/start/getting-started.mdx
+++ b/packages/document/docs/zh/guide/start/getting-started.mdx
@@ -46,10 +46,10 @@ mkdir docs && echo '# Hello World' > docs/index.md
 
 ```ts title="rspress.config.ts"
 import { defineConfig } from 'rspress/config';
-import path from 'path';
 
 export default defineConfig({
-  root: path.join(__dirname, 'docs'),
+  // 文档根目录
+  root: 'docs',
 });
 ```
 
