--- a/packages/document/docs/en/guide/start/introduction.mdx
+++ b/packages/document/docs/en/guide/start/introduction.mdx
@@ -10,7 +10,11 @@ The design goals of Rspress are: **first-class compilation performance**, **out-
 
 ### High-performance Rust Toolchain
 
-In Rspress, in order to break through the compilation performance bottleneck of traditional front-end tools, we have made a lot of efforts on the Rust toolchain.
+In Rspress, in order to break through the compilation performance bottleneck of traditional front-end tools, we have made a lot of efforts on the Rust toolchain. Now Rspress has obvious advantages in compilation performance compared to other SSG frameworks:
+
+import { Benchmark } from '@/components/BenchMark';
+
+<Benchmark />
 
 Firstly, Rspress is built on [Rspack](https://rspack.dev/), a high-performance front-end packaging tool based on Rust, which has built-in various optimization methods, such as multi-threaded parallel compilation, incremental compilation, etc. Compared with traditional packaging tools like Webpack, Rollup, etc., Rspack's compilation speed has increased by 5 ~ 10 times.
 
