--- a/packages/document/docs/en/guide/start/introduction.mdx
+++ b/packages/document/docs/en/guide/start/introduction.mdx
@@ -12,7 +12,7 @@ The design goals of Rspress are: **first-class compilation performance**, **out-
 
 In Rspress, in order to break through the compilation performance bottleneck of traditional front-end tools, we have made a lot of efforts on the Rust toolchain. Now Rspress has obvious advantages in compilation performance compared to other SSG frameworks:
 
-import { Benchmark } from '@/components/BenchMark';
+import { Benchmark } from '@/components/Benchmark';
 
 <Benchmark />
 
