--- a/packages/document/docs/zh/guide/start/introduction.mdx
+++ b/packages/document/docs/zh/guide/start/introduction.mdx
@@ -12,7 +12,7 @@ Rspress 的设计目标是：**一流的编译性能**、**开箱即用的主题
 
 在 Rspress 中，为了突破传统前端工具的编译性能瓶颈，我们在 Rust 工具链上做了很多的努力，相比与现有的 SSG 框架有明显的性能优势，具体测试数据如下：
 
-import { Benchmark } from '@/components/BenchMark';
+import { Benchmark } from '@/components/Benchmark';
 
 <Benchmark />
 
