--- a/packages/document/docs/en/plugin/official-plugins/preview.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/preview.mdx
@@ -27,7 +27,7 @@ export default defineConfig({
 
 :::warning Note
 
-After adding this plugin, please do not enable the `markdown.experimentalMdxRs` config, otherwise it will cause the plugin to fail.
+After adding this plugin, please set `markdown.mdxRs` to `false`, otherwise it will cause the plugin to fail.
 
 :::
 
