--- a/packages/document/docs/zh/fragments/mdx-rs.mdx
+++ b/packages/document/docs/zh/fragments/mdx-rs.mdx
@@ -3,7 +3,7 @@ import { defineConfig } from 'rspress/config';
 
 export default defineConfig({
   markdown: {
-    experimentalMdxRs: true,
+    mdxRs: true,
   },
 });
 ```
