--- a/packages/document/docs/zh/plugin/official-plugins/preview.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/preview.mdx
@@ -26,7 +26,7 @@ export default defineConfig({
 ```
 
 :::warning 注意
-在加入该插件后，请勿开启 `markdown.experimentalMdxRs`配置，否则会导致插件失效。
+在加入该插件后，请设置 `markdown.mdxRs` 配置为 `false`，否则会导致插件失效。未来 Rspress 团队会将该插件移植到 Rust 版本的编译器中，届时此配置项就不再需要。
 :::
 
 ### 内部组件
