--- a/packages/document/docs/en/plugin/official-plugins/playground.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/playground.mdx
@@ -27,7 +27,7 @@ export default defineConfig({
 
 :::warning Note
 
-1. After adding this plugin, please do not enable the `markdown.experimentalMdxRs` config, otherwise it will cause the plugin to fail.
+1. After adding this plugin, please set `markdown.mdxRs` to `false`, otherwise it will cause the plugin to fail.
 2. Please do not use this plugin with the preview plugin at the same time.
 
 :::
